package org.wavelabs.soundscope.use_case.start_recording;

public record RecordingOD (boolean isPlaying) {}
