package org.wavelabs.soundscope.use_cases.startRecording;

public interface StartRecordingIB {
    /**
     * Executes the start recording use case.
     */
    void execute();
}

